--- a/aa.html
+++ b/aa.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl"> <!-- زبان و جهت -->
 <head> <!-- بخش متادیتا -->
 <meta charset="UTF-8"> <!-- کدگذاری کاراکتر -->
-<title>صفحه تست برای عضو بودن در سایت مدرسه</title> <!-- عنوان صفحه -->
+<title>فرم ثبت نام</title> <!-- عنوان صفحه -->
 <style> /* استایل داخلی */
 :root{ /* متغیرهای اصلی */
     --bg:#e0e5ec; /* اینا چون تایم کم بود مخفف نوشتم رنگ پس‌زمینه */
@@ -103,7 +103,8 @@ body{ /* صفحه اصلی */
     transform:translateY(-2px);box-shadow:10px 10px 20px #b8c1d1,-10px -10px 20px #fff
 }
 .l{
-    font-size:.9rem;color:#7f8c8d
+    font-size:.9rem;
+    color:#7f8c8d;
 }
 .l a{
     color:var(--c);text-decoration:none
@@ -126,3 +127,4 @@ body{ /* صفحه اصلی */
 </body>
 
 </html>
+
