--- a/aa.html
+++ b/aa.html
@@ -118,7 +118,7 @@ body{ /* صفحه اصلی */
 <div class="f">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRtt02yrPvyAtKKRS89W1EfdbACilKiNzO3A&s" alt="لوگو"> <!-- لوگو دایره‌ای -->
   <h3>Web Development</h3> <!-- عنوان اصلی -->
-  <p>Made easy!</p> <!-- زیرعنوان -->
+  <p>i Made it easy!</p> <!-- زیرعنوان -->
   <div class="i u"><input type="text" placeholder="username"></div> <!-- فیلد نام کاربری -->
   <div class="i p"><input type="password" placeholder="password"></div> <!-- فیلد رمز عبور -->
   <button class="b"><a href="https://schpedia.ir/">login</a></button> <!-- دکمه ورود -->
@@ -127,4 +127,5 @@ body{ /* صفحه اصلی */
 </body>
 
 </html>
+
 
